--- a/reseñas.html
+++ b/reseñas.html
@@ -42,7 +42,7 @@
         <section class="secundario">
             <div class="reseñas">
                 <div class="imgsInicio" title="Ver más reseñas">
-                    <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
+                    <a target="_blank" href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
                         <div class="reseñasimg">
                             <img style="width:100px; height:100px;" src="images/iconos/icons01.ico" alt="kuiil montando un  Blurrg">
                         </div>
@@ -56,7 +56,7 @@
                     </a>
                 </div>
                 <div class="imgsInicio" title="Ver más reseñas">
-                    <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
+                    <a target="_blank" href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
                         <div class="reseñasimg">
                             <img style="width:100px; height:100px;" src="images/iconos/icons01.ico" alt="Mando y grogu encuentro">
                         </div>
@@ -67,7 +67,7 @@
                     </a>
                 </div>
                 <div class="imgsInicio" title="Ver más reseñas">
-                    <a href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
+                    <a target="_blank" href="https://www.google.com/search?q=rese%C3%B1as+mandalorian&rlz=1C1VDKB_enAR1093AR1093&oq=rese%C3%B1as+mandalorian&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRifBTIHCAMQIRifBTIHCAQQIRifBTIHCAUQIRifBTIHCAYQIRifBTIHCAcQIRifBTIHCAgQIRifBTIHCAkQIRifBdIBCDYxNTBqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
                         <div class="reseñasimg">
                             <img style="width:100px; height:100px;" src="images/iconos/icons01.ico"alt="Mando animacion">
                         </div>
