centrar img de historia

--- a/historia.html
+++ b/historia.html
@@ -83,7 +83,7 @@
                             También en noviembre Gina Carano y Nick Nolte habían sido elegidos para los papeles principales.
                         </p>
                 </div>
-                <div class="imgsHistoria" >
+                <div class="imgsHistoria" style="text-align: center;">
                     <img src="images/escena-de-the-mandalorian-4691.webp" width="75%"  alt="Escena de the mandalorian 4691">
                 </div>
             </div>
