--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section> 
         <article class="presentacion">
             <div>
-                <video src="./images/The Mandalorian Intro (4K).mp4" controls width="100%" height="600px" autoplay="true" muted style="background-color:#000;"></video>
+                <video src="./images/The Mandalorian Intro (4K).mp4" controls width="100%" height="600px" autoplay="true" muted loop style="background-color:#000;"></video>
             </div>
         </article>
         <article class="principal">
