--- a/galeria.html
+++ b/galeria.html
@@ -46,16 +46,16 @@
             </div>
             <div class="galeria-ct">
                 <a class="example-image-link" href="images/Galeria/galeria-1-grande.jpg" data-lightbox="mandalorian" data-title="Mando caminando."><img class="example-image" src="images/Galeria/galeria-1.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-2-grande.jpg" data-lightbox="mandalorian" data-title="Mando con Grogu en Tatooine"><img class="example-image" src="images/Galeria/galeria-2.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-3-grande.jpg" data-lightbox="mandalorian" data-title="Mando caminando con Grogu."><img class="example-image" src="images/Galeria/galeria-3.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-4-grande.jpg" data-lightbox="mandalorian" data-title="Mando"><img class="example-image" src="images/Galeria/galeria-4.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-2-grande.webp" data-lightbox="mandalorian" data-title="Mando con Grogu en Tatooine"><img class="example-image" src="images/Galeria/galeria-2.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-3-grande.webp" data-lightbox="mandalorian" data-title="Mando caminando con Grogu."><img class="example-image" src="images/Galeria/galeria-3.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-4-grande.webp" data-lightbox="mandalorian" data-title="Mando"><img class="example-image" src="images/Galeria/galeria-4.jpg" alt=""/></a>
                 <a class="example-image-link" href="images/Galeria/galeria-5-grande.jpg" data-lightbox="mandalorian" data-title="Mando con Gorgu Pilotando"><img class="example-image" src="images/Galeria/galeria-5.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-6-grande.jpg" data-lightbox="mandalorian" data-title="Mando entre disparos"><img class="example-image" src="images/Galeria/galeria-6.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-7-grande.jpg" data-lightbox="mandalorian" data-title="Mando con la espada llamada sable oscuro"><img class="example-image" src="images/Galeria/galeria-7.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-8-grande.jpg" data-lightbox="mandalorian" data-title="El Mandaloriano Mando llevando un prisionero"><img class="example-image" src="images/Galeria/galeria-8.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-6-grande.webp" data-lightbox="mandalorian" data-title="Mando entre disparos"><img class="example-image" src="images/Galeria/galeria-6.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-7-grande.webp" data-lightbox="mandalorian" data-title="Mando con la espada llamada sable oscuro"><img class="example-image" src="images/Galeria/galeria-7.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-8-grande.webp" data-lightbox="mandalorian" data-title="El Mandaloriano Mando llevando un prisionero"><img class="example-image" src="images/Galeria/galeria-8.jpg" alt=""/></a>
                 <a class="example-image-link" href="images/Galeria/galeria-9-grande.jpeg" data-lightbox="mandalorian" data-title="El Mandaloriano Mando con Grogu en la nieve"><img class="example-image" src="images/Galeria/galeria-9.jpg" alt=""/></a>
                 <a class="example-image-link" href="images/Galeria/galeria-10-grande.webp" data-lightbox="mandalorian" data-title="El Mandaloriano Mando en Planeta Arvala-7"><img class="example-image" src="images/Galeria/galeria-10.jpg" alt=""/></a>
-                <a class="example-image-link" href="images/Galeria/galeria-11-grande.jpg" data-lightbox="mandalorian" data-title="Mando con Cara Dune y Greef Karga"><img class="example-image" src="images/Galeria/galeria-11.jpg" alt=""/></a>
+                <a class="example-image-link" href="images/Galeria/galeria-11-grande.webp" data-lightbox="mandalorian" data-title="Mando con Cara Dune y Greef Karga"><img class="example-image" src="images/Galeria/galeria-11.jpg" alt=""/></a>
                 <a class="example-image-link" href="images/Galeria/galeria-12-grande.webp" data-lightbox="mandalorian" data-title="Mando con Kuiil en la cabina del Razor Crest"><img class="example-image" src="images/Galeria/galeria-12.jpg" alt=""/></a>
             </div>
         </article>
