Update Img tamaños

--- a/personajes.html
+++ b/personajes.html
@@ -47,7 +47,7 @@
                     <a href="https://es.wikipedia.org/wiki/Pedro_Pascal" target="_blank" title="Más información.">
                         <div class="personajes-ct">
                             <div>
-                                <img src="images/Personajes/mando.jpg" height="300px" width="400px" alt="Mando">
+                                <img src="images/Personajes/mando.webp" height="300px" width="400px" alt="Mando">
                             </div>
                             <h4>El Mandaloriano (Pedro Pascal)</h4>
                             <p >Interpretado por José Pedro Balmaceda Pascal, 
@@ -65,7 +65,7 @@
                     <a href="https://es.wikipedia.org/wiki/Grogu" target="_blank" title="Más información.">
                         <div class="personajes-ct">
                             <div>
-                                <img src="images/Personajes/Grogu.jpg" height="300px" width="400px" alt="Grogu">
+                                <img src="images/Personajes/Grogu.webp" height="300px" width="400px" alt="Grogu">
                             </div>
                             <h4>Baby yoda/Grogu </h4>
                             <p >Nuestro querido Baby Yoda, que sabemos que se llama Grogu a partir del
@@ -129,7 +129,7 @@
                     <a href="https://es.wikipedia.org/wiki/Katee_Sackhoff" target="_blank" title="Más información.">
                         <div class="personajes-ct">
                             <div>
-                                <img src="images/Personajes/BO-KATAN-KRYZE.jpg" height="300px" width="400px" alt="Bo-Katan Kryze">
+                                <img src="images/Personajes/BO-KATAN-KRYZE.webp" height="300px" width="400px" alt="Bo-Katan Kryze">
                             </div>
                             <h4>Bo-Katan Kryze (Kate Sackhoff)</h4>
                             <p >Kate Sackhoff interpreta a Bo-Katan Kryze en The Mandalorian tras haber sido la actriz 
