color en strong

--- a/historia.html
+++ b/historia.html
@@ -56,7 +56,7 @@
                             (3:01 a. m. EST), con la excepción del primero y séptimo episodios de esa 
                             temporada. Después de la conclusión de la primera temporada, un detrás de 
                             escenas de ocho episodios fue lanzado comenzando en mayo de 2020, titulado 
-                            Galería Disney: The Mandalorian. El 30 de octubre de 2020, la segunda temporada 
+                            Galería Disney: <strong>The Mandalorian.</strong> El 30 de octubre de 2020, la segunda temporada 
                             se estrenó en Disney+. Los episodios de la segunda temporada debutaron los 
                             viernes a las 8:01 UTC (3:01 a. m. EST). Dos especiales de Galería Disney: 
                             The Mandalorian sobre cómo se hizo la segunda temporada fueron lanzados después. 
@@ -69,10 +69,10 @@
                             un <b>cazarrecompensas mandaloriano</b> solitario en los confines de la galaxia.
                             Es contratado por las fuerzas imperiales remanentes para recuperar al niño 
                             Grogu, pero en su lugar huye para protegerlo. Mientras buscan reunir a Grogu 
-                            con los de su clase, son perseguidos por Moff Gideon, que quiere usar la conexión
+                            con los de su clase, son perseguidos por <strong>Moff Gideon</strong>, que quiere usar la conexión
                             de Grogu con la Fuerza.</br></br>
                             
-                            En noviembre de 2018, se anunció que <b>Pedro Pascal</b> fue elegido como protagonista.
+                            En noviembre de 2018, se anunció que <strong>Pedro Pascal</strong> fue elegido como protagonista.
                             Pascal inicialmente pensó que lo elegirían como el personaje de <b>Star Wars</b>, Boba Fett, 
                             debido a las similitudes visuales entre ese personaje y el Mandaloriano,  pero este 
                             último es un personaje separado llamado <b>Din Djarin</b>.  Favreau llamó a Pascal "una estrella 
