--- a/historia.html
+++ b/historia.html
@@ -75,10 +75,10 @@
                             En noviembre de 2018, se anunció que <strong>Pedro Pascal</strong> fue elegido como protagonista.
                             Pascal inicialmente pensó que lo elegirían como el personaje de <b>Star Wars</b>, Boba Fett, 
                             debido a las similitudes visuales entre ese personaje y el Mandaloriano,  pero este 
-                            último es un personaje separado llamado <b>Din Djarin</b>.  Favreau llamó a Pascal "una estrella 
+                            último es un personaje separado llamado <strong>Din Djarin</strong>.  Favreau llamó a Pascal "una estrella 
                             de cine clásica" que "tenía la presencia y las habilidades" necesarias para interpretar a 
                             un personaje en gran medida oculto bajo un casco.  El Mandaloriano también es interpretado 
-                            por los dobles Brendan Wayne, Lateef Crowder,  y Barry Lowin.  Pascal trabajó con Favreau y 
+                            por los dobles <strong>Brendan Wayne</strong>, <strong>Lateef Crowder</strong>, y <strong>Barry Lowin</strong>.  Pascal trabajó con Favreau y 
                             Filoni para grabar el diálogo del personaje más tarde
                             También en noviembre Gina Carano y Nick Nolte habían sido elegidos para los papeles principales.
                         </p>
