--- a/temporadas.html
+++ b/temporadas.html
@@ -42,13 +42,13 @@
         </div>
         <article >
             <div style="padding: 60px 0px 0px 0px ;">
-                <h4>1° Temporada:</h4>
-                <p>The Mandalorian Primera Temporada es la primera temporada de la serie de televisión de acción en vivo The Mandalorian que 
-                    se estrenó el 12 de noviembre de 2019 en Estados Unidos por Disney+, el actual servicio de transmisión de The Walt Disney 
+                <h4>1° Temporada: </h4>
+                <p><strong>The Mandalorian</strong> Primera Temporada es la primera temporada de la serie de televisión de acción en vivo The Mandalorian que 
+                    se estrenó el <strong>12</strong> de <strong>noviembre</strong> de <strong>2019</strong> en Estados Unidos por <strong>Disney+</strong>, el actual servicio de transmisión de The Walt Disney 
                     Company, como una de sus primeras producciones.<br>
                     En España, el servicio vía streaming llegó el 24 de marzo de 2020, estrenándose consigo los dos primeros episodios y 
                     posteriormente uno por semana.<br>
-                    Mientras que en Latinoamérica, la primera temporada completa se estrenó el 17 de noviembre del mismo año.<br><br>
+                    Mientras que en <strong>Latinoamérica</strong>, la primera temporada completa se estrenó el <strong>17</strong> de <strong>noviembre</strong> del mismo año.<br><br>
                     "En los primeros episodios de Mandalorian, Jon y yo estabamos descifrando nuestro estilo de escritura y colaboración. 
                     En la mayoría de las reuniones para la historia nos sentamos y platicamos sobre qué nos gustaría ver en Star Wars. 
                     Presionando los límites del otro y reuniéndonos para pensar en buenas soluciones. Puedo sentarme con Jon y, en una hora, 
@@ -56,11 +56,11 @@
                     secretamente con el tiempo. Intentaba crear una ligeramente distitna forma de escribir Star Wars. Jon quería fuertemente 
                     tropos del oeste. Y los del oeste tienen un diálogo muy claro. Los pistoleros no dicen mucho. Así que, eso fue diferente 
                     para mí."<span id="2temp"></span> 
-                    ―Dave Filoni.<br><br>
-                    Desarrollo: Los guiones de los primeros dos episodios fueron escritos por Jon Favreau durante las vacaciones de diciembre de 2017 y, 
+                    <strong>―Dave Filoni</strong>.<br><br>
+                    <strong>Desarrollo:</strong> Los guiones de los primeros dos episodios fueron escritos por Jon Favreau durante las vacaciones de diciembre de 2017 y, 
                     para principios de febrero de 2018, Favreau completó los primeros bocetos de los primeros cuatro episodios. La filmación 
                     tuvo lugar del 1 de octubre de 2018, al 12 de febrero de 2019. George Lucas visitó el set el 19 de octubre, el cual 
-                    coincidió con el cumpleaños de Jon Favreau.<br><br>
+                    coincidió con el cumpleaños de <strong>Jon Favreau</strong>.<br><br>
                 </p>
             </div>
             <!-- <div class="personajes-st"> 
@@ -78,20 +78,20 @@
                 <h4>2° Temporada:</h4>
                 <p>"La nueva temporada introducirá una historia más grande en el mundo. Las historias se vuelven menos aisladas, 
                     aunque cada episodio tiene su propio sabor, y ojalá traigamos más alcance a la serie."
-                    ―Jon Favreau sobre la segunda temporada.<br><br>
-                    The Mandalorian Segunda Temporada es la segunda temporada de la serie de televisión de red estadounidense The Mandalorian. 
-                    Se estrenó en Disney+ el 30 de octubre de 2020 en Estados Unidos y España, mientras que en Latinoamérica comenzó a emitirse 
+                    <strong>―Jon Favreau</strong> sobre la segunda temporada.<br><br>
+                    <strong>The Mandalorian</strong> Segunda Temporada es la segunda temporada de la serie de televisión de red estadounidense The Mandalorian. 
+                    <strong>Se estrenó</strong> en Disney+ el <strong>30</strong> de <strong>octubre</strong> de <strong>2020</strong> en Estados Unidos y España, mientras que en Latinoamérica comenzó a emitirse 
                     a partir del 17 de noviembre del mismo año.<br><br>
-                    Desarrollo: En julio de 2019, el showrunner Jon Favreau mencionó que él había comenzado a escribir la segunda temporada de la serie, 
+                    <strong>Desarrollo:</strong> En julio de 2019, el showrunner Jon Favreau mencionó que él había comenzado a escribir la segunda temporada de la serie, 
                     y que la preproducción estaba en marcha.Como le dijo a Entertainment Weekly, su guion influenciado por el formato de Game of Thrones 
                     de contar múltiples historias al mismo tiempo.<br><br>
-                    Favreau también regresó como director, junto con el miembro del reparto Carl Weathers y los directores de la primera temporada Dave Filoni
+                    <strong>Favreau</strong> también regresó como director, junto con el miembro del reparto <strong>Carl Weathers</strong> y los directores de la primera temporada Dave Filoni
                     , Rick Famuyiwa y Bryce Dallas Howard,así como los recién llegados Peyton Reed y Robert Rodriguez, nuevos directores de la serie.
                     Con menos costos de inicio que la primera temporada, más del presupuesto fue usado para la serie misma. George Lucas visitó el set otra vez, 
-                    y le dio consejos a Filoni sobre dirección. <span id="3temp"></span>La temporada terminó de filmarse pocos días antes de la pandemia del COVID-19 en marzo de 2020. 
+                    y le dio consejos a Filoni sobre dirección. <span id="3temp"></span>La temporada terminó de filmarse pocos días antes de la <strong>pandemia</strong> del COVID-19 en marzo de 2020. 
                     El equipo de posproducción se tuvo que adaptar a la cuarentena, con su mayor problema siendo la grabación de la banda sonora.<br><br>
-                    Lanzamiento: El 8 de septiembre de 2020, Entertainment Weekly reveló las primeras imágenes promocionales de la temporada.
-                    El primer tráiler fue lanzado el 15 de septiembre, seguido de un «vistazo» especial durante el medio tiempo del Monday Night Football el 19 de octubre.
+                    <strong>Lanzamiento:</strong> El 8 de septiembre de 2020, Entertainment Weekly reveló las primeras imágenes promocionales de la temporada.
+                    El primer tráiler fue lanzado el 15 de septiembre, seguido de un «vistazo» especial durante el medio tiempo del <strong>Monday Night Football</strong> el 19 de octubre.
                 </p>
             </div>      
             <!-- <div class="personajes-st"> 
@@ -107,21 +107,21 @@
             </div> -->
             <div style="padding: 60px 0px 0px 0px ;">
                 <h4>3° Temporada:</h4>
-                <p>The Mandalorian Tercera Temporada es la tercera temporada de la serie de televisión estadounidense The Mandalorian. 
-                    La temporada se estrenó el 1 de marzo de 2023 y tiene lugar después de los sucesos de la serie El Libro de Boba Fett.<br><br>
+                <p><strong>The Mandalorian</strong> Tercera Temporada es la tercera temporada de la serie de televisión estadounidense The Mandalorian. 
+                    La temporada se estrenó el 1 de marzo de 2023 y tiene lugar después de los sucesos de la serie <strong>El Libro de Boba Fett</strong>.<br><br>
 
-                    Descripción oficial:Los viajes del Mandaloriano a través de la galaxia de Star Wars continúan. Una vez un cazarrecompensas solitario, 
+                    <strong>Descripción oficial:</strong> Los viajes del Mandaloriano a través de la galaxia de Star Wars continúan. Una vez un cazarrecompensas solitario, 
                     Din Djarin se ha reunido con Grogu. Mientras tanto, la Nueva República lucha por alejar a la galaxia de su oscura historia. 
                     El Mandaloriano se cruzará con viejos aliados y creará nuevos enemigos mientras él y Grogu continúan su viaje juntos.<br><br>
                    
-                    Desarrollo:El 15 de octubre de 2020, el productor ejecutivo y guionista de la serie, Jon Favreau, le dijo a Variety que The 
+                    <strong>Desarrollo:</strong> El 15 de octubre de 2020, el productor ejecutivo y guionista de la serie, Jon Favreau, le dijo a Variety que The 
                     Mandalorian estaba programada para comenzar la producción antes de terminar el año. De acuerdo con Phil Szostak, el departamento 
                     artístico de Lucasfilm Ltd. comenzó la producción de arte conceptual en noviembre de 2019, días antes del lanzamiento de la primera 
-                    temporada. El 10 de diciembre de 2020, Kathleen Kennedy adelantó que el "siguiente capítulo" de The Mandalorian llegaría en Navidad de 2021.<br><br>
+                    temporada. El 10 de diciembre de 2020,<strong>Kathleen Kennedy</strong> adelantó que el "siguiente capítulo" de The Mandalorian llegaría en Navidad de 2021.<br><br>
 
-                    Sin embargo, el 21 de diciembre de 2020, Favreau apareció en Good Morning America en la ABC Television Network y aclaró que El Libro 
+                    Sin embargo, el 21 de diciembre de 2020,<strong>Favreau</strong> apareció en Good Morning America en la ABC Television Network y aclaró que El Libro 
                     de Boba Fett estaba actualmente en producción y que sería lanzada en diciembre de 2021, mientras que la tercera temporada de The Mandalorian 
-                    comenzaría su producción cuando la filmación de El Libro de Boba Fett se completara. Una publicación de StarWars.com de ese mismo día 
+                    comenzaría su producción cuando la filmación de El Libro de Boba Fett se completara. Una publicación de <strong>StarWars</strong>.com de ese mismo día 
                     reiteró esto y mencionó que The Mandalorian Tercera Temporada comenzaría su producción en 2021. Un anuncio de Edelweiss+ para The 
                     Mandalorian: Boba Fett Returns indicó que la temporada 3 se estrenaría en la primavera de 2022. No obstante, la página se eliminó 
                     y Boba Fett Returns se retituló a The Mandalorian: The Rescue. La filmación comenzó en septiembre de 2021, and wrapped in March 2022. 
@@ -130,10 +130,10 @@
                     La serie derivada El Libro de Boba Fett se estrenó el 29 de diciembre de 2021, y contó con varios personajes que aparecieron 
                     en The Mandalorian después de los sucesos de la segunda temporada. La tercera temporada tiene lugar tras lo ocurrido en El Libro de Boba Fett.<br><br>
 
-                    Durante la Celebration Anaheim en 2022, se anunció que la temporada se estrenaría en febrero de 2023 y se mostró un adelanto exclusivo. 
+                    Durante la <strong>Celebration Anaheim en 2022</strong>, se anunció que la temporada se estrenaría en febrero de 2023 y se mostró un adelanto exclusivo. 
                     También se anunció que Rick Famuyiwa era el productor ejecutivo y uno de los directores de la tercera temporada. El 10 de septiembre de 
                     2022, se estrenó públicamente un adelanto de la temporada. El 1 de diciembre de 2022, se anunció su retraso hasta el 1 de marzo de 2023. 
-                    El 16 de enero de 2023, se estrenó el tráiler y póster oficial durante el medio tiempo del partido de NFL Super Wild Card.<br><br>
+                    El 16 de enero de 2023, se estrenó el tráiler y póster oficial durante el medio tiempo del partido de <strong>NFL Super Wild Card</strong>.<br><br>
                 </p>
             </div>  
          </article>
