--- a/personajes.html
+++ b/personajes.html
@@ -50,11 +50,11 @@
                                 <img src="images/Personajes/mando.webp" height="300px" width="400px" alt="Mando">
                             </div>
                             <h4>El Mandaloriano (Pedro Pascal)</h4>
-                            <p >Interpretado por José Pedro Balmaceda Pascal, 
-                                es un actor de teatro, televisión, cine, voz y director teatral chileno
+                            <p >Interpretado por <strong>José Pedro Balmaceda Pascal</strong>, 
+                                es un actor de teatro, televisión, cine, voz y director teatral <strong>chileno</strong>
                                 estadounidense. 
-                                Es conocido por interpretar al príncipe Oberyn Martell en la serie de televisión Game 
-                                of Thrones, a Javier Peña en Narcos de Netflix; a el Mandaloriano en la serie The Mandalorian, 
+                                Es conocido por interpretar al príncipe Oberyn Martell en la serie de televisión <strong>Game 
+                                of Thrones</strong>, a Javier Peña en Narcos de Netflix; a <strong>el Mandaloriano</strong> en la serie The Mandalorian, 
                                 y por la serie The Last of Us de HBO, donde interpreta al protagonista Joel Miller.</p>
                         </div>
                     </a>
@@ -68,10 +68,10 @@
                                 <img src="images/Personajes/Grogu.webp" height="300px" width="400px" alt="Grogu">
                             </div>
                             <h4>Baby yoda/Grogu </h4>
-                            <p >Nuestro querido Baby Yoda, que sabemos que se llama Grogu a partir del
+                            <p >Nuestro querido Baby Yoda, que sabemos que se llama <strong>Grogu</strong> a partir del
                                 episodio 5 de la segunda temporada, está interpretado por un equipo de titiriteros. Sí, 
-                                Grogu es una especie de marioneta. Aunque parezca un bebé y los sonidos que emite están 
-                                sacados de bebés humanos, tiene 50 años.</p>
+                                Grogu es una especie de <strong>marioneta</strong>. Aunque parezca un bebé y los sonidos que emite están 
+                                sacados de bebés humanos, tiene <strong>50 años</strong>.</p>
                         </div>
                     </a>
                 <!-- </article> -->
@@ -84,10 +84,10 @@
                                 <img src="images/Personajes/CaraDuneimg.jpg" height="300px" width="400px" alt="Cara Dune (Gina Carano)">
                             </div>
                             <h4>Cara Dune (Gina Carano)</h4>
-                            <p >Gina Carano, actriz presente en películas como Fast & Furious 6 o 
-                                Deadpool, también ha sido luchadora de artes marciales mixtas, MMA, llegando a ser la 
+                            <p ><strong>Gina Carano</strong>, actriz presente en películas como <strong>Fast & Furious</strong> 6 o 
+                                Deadpool, también ha sido <strong>luchadora</strong> de artes marciales mixtas, MMA, llegando a ser la 
                                 tercera mejor luchadora del mundo en su categoría de peso. En The Mandalorian interpreta 
-                                a Cara Dune, personaje recurrente en las dos temporada y que cruza su camino con el 
+                                a <strong>Cara Dune</strong>, personaje recurrente en las dos temporada y que cruza su camino con el 
                                 Mandaloriano varias veces.</p>
                         </div>
                     </a>
@@ -101,8 +101,8 @@
                                 <img src="images/Personajes/blog-5.jpg" height="300px" width="400px" alt="Greef Karga">
                             </div>
                             <h4>Greef Karga (Carl Weathers)</h4>
-                            <p >Carl Weathers, actor que podemos ver en películas como Depredador y que recordamos por 
-                                haber interpretado al mítico Apollo Creed en la saga de Rocky, interpreta a Greef Karga en The Mandalorian. 
+                            <p ><strong>Carl Weathers</strong>, actor que podemos ver en películas como Depredador y que recordamos por 
+                                haber interpretado al mítico Apollo Creed en la saga de Rocky, interpreta a <strong>Greef Karga</strong> en The Mandalorian. 
                                 Como curiosidad, es un personaje que iba a morir muy pronto en la serie, pero su carisma logró convencer al 
                                 equipo creativo y se ha mantenido como un habitual en las dos primeras temporadas.</p>
                         </div>
@@ -117,9 +117,9 @@
                                 <img src="images/Personajes/blog-6.jpg" height="300px" width="400px" alt="Moff Gideon">
                             </div>
                             <h4>Moff Gideon (Giancarlo Esposito)</h4>
-                            <p >Muchos nos acordamos de los Pollos Hermanos cuando vimos por primera vez a Giancarlo 
-                                Esposito interpretando a Moff Gideon, porque sí, es uno de los personajes de las series Breaking Bad y 
-                                Better Call Saul. El villano principal de la segunda temporada de The Mandalorian.</p>
+                            <p >Muchos nos acordamos de los Pollos Hermanos cuando vimos por primera vez a <strong>Giancarlo</strong> 
+                                Esposito interpretando a <strong>Moff Gideon</strong>, porque sí, es uno de los personajes de las series <strong>Breaking Bad</strong> y 
+                                Better Call Saul. El <strong>villano principal</strong> de la segunda temporada de The Mandalorian.</p>
                         </div>
                     </a>
                 <!-- </article> -->
@@ -132,7 +132,7 @@
                                 <img src="images/Personajes/BO-KATAN-KRYZE.webp" height="300px" width="400px" alt="Bo-Katan Kryze">
                             </div>
                             <h4>Bo-Katan Kryze (Kate Sackhoff)</h4>
-                            <p >Kate Sackhoff interpreta a Bo-Katan Kryze en The Mandalorian tras haber sido la actriz 
+                            <p ><strong>Kate Sackhoff</strong> interpreta a <strong>Bo-Katan Kryze</strong> en The Mandalorian tras haber sido la actriz 
                                 de doblaje del mismo personaje en Star Wars: The Clone Wars y Star Wars Rebels. Se convertirá en un 
                                 personaje importante en la segunda temporada, donde conocemos sus verdaderas intenciones.</p>
                         </div>
@@ -147,8 +147,8 @@
                                 <img src="images/Personajes/el-cliente.webp" height="400px" width="400px" alt="El cliente">
                             </div>
                             <h4>El cliente (Werner Herzog)</h4>
-                            <p >Una de las elecciones más intrigantes, pues Werner Herzog es más 
-                                conocido por su trabajo como director que como actor. Interpreta al "cliente" que 
+                            <p >Una de las elecciones más intrigantes, pues <strong>Werner Herzog</strong> es más 
+                                conocido por su trabajo como director que como actor. Interpreta al <strong>"cliente"</strong> que 
                                 contrata al Mandaloriano y pone los eventos de la primera temporada en marcha.</p>
                         </div>
                     </a>
@@ -162,13 +162,13 @@
                                 <img src="images/Personajes/boba-fett.webp" height="400px" width="600px" alt="Boba fett">
                             </div>
                             <h4>Boba fett (Temuera Morrison)</h4>
-                            <p >Sí, el actor Temuera Morrison interpreta a Boba Fett, quien 
+                            <p >Sí, el actor <strong>Temuera Morrison</strong> interpreta a <strong>Boba Fett</strong>, quien 
                                 ya interpretó a Jango Fett en Star 
                                 Wars Episodio II. También reemplazó la voz del actor original de Boba Fett de 
                                 la trilogia original en sus relanzamientos en DVD. Aquí lo vemos en el primer 
                                 episodio de la segunda temporada para reaparecer en el sexto episodio y, finalmente, 
                                 confirmar en la escena poscréditos del episodio final que contará con una serie propia: 
-                                El Libro de Boba Fett.</p>
+                                <strong>El Libro de Boba Fett</strong>.</p>
                         </div>
                     </a>
                 <!-- </article> -->
@@ -181,7 +181,7 @@
                                 <img src="images/Personajes/ahsoka-tano-rosario dawson.webp" height="300px" width="400px" alt="Ahsoka tano">
                             </div>
                             <h4>Ahsoka tano (Rosario dawson)</h4>
-                            <p >La actriz Rosario Dawson se encarga de interpretar a Ahsoka Tano, la aprendiz de 
+                            <p >La actriz <strong>Rosario Dawson</strong> se encarga de interpretar a <strong>Ahsoka Tano</strong>, la aprendiz de 
                                 Anakin Skywalker en Star Wars: The Clone Wars. Su bagaje como actriz la precede, apareciendo en 
                                 multitud de películas como Sin City, Siete Almas, Daredevil... también protagonizará la serie 
                                 independiente que ya ha sido confirmada para este personaje.</p>
@@ -197,7 +197,7 @@
                                 <img src="images/Personajes/armera-emily-swallow.webp" height="300px" width="400px" alt="La Armera">
                             </div>
                             <h4>La Armera (Emily Swallow)</h4>
-                            <p >Emily Swallow, que hemos visto en otras series como Sobrenatural o El Mentalista, 
+                            <p ><strong>Emily Swallow</strong>, que hemos visto en otras series como Sobrenatural o El Mentalista, 
                                 interpreta a la Armera que forja las nuevas piezas de la armadura de Beskar de Mando, además de ser 
                                 la líder de esta comunidad de Mandalorianos que vemos en la serie.</p>
                         </div>
@@ -212,10 +212,10 @@
                                 <img src="images/Personajes/kuiil-nick-nolte.webp" height="300px" width="400px" alt="kuiil">
                             </div>
                                 <h4>kuiil (Nick Nolte)</h4>
-                            <p >Nick Nolte, reconocidísimo actor estadounidense, pone voz a Kuiil, el 
+                            <p ><strong>Nick Nolte</strong>, reconocidísimo actor estadounidense, pone voz a <strong>Kuiil</strong>, el 
                                 personaje que vive en la solitarias dunas y que resulta de vital importancia para Grogu 
                                 en la primera temporada de The Mandalorian. Nolte pone voz, pero la actriz encargada de 
-                                llevar el disfraz y de realizar la interpretación física es Misty Rosas. He hablado.</p>
+                                llevar el disfraz y de realizar la interpretación física es <strong>Misty Rosas</strong>. He hablado.</p>
                         </div>
                     </a>
                 <!-- </article> -->
@@ -228,8 +228,8 @@
                                 <img src="images/Personajes/peli-motto-amy-sedaris.webp" height="300px" width="400px" alt="Peli Motto">
                             </div>
                             <h4>Peli Motto (Amy Sedaris)</h4>
-                            <p >Amy Sedaris es una actriz, escritora y cómica conocida por sus papeles en 
-                            Trainwreck o en la serie Strangers with Candy. En The Mandalorian interpreta a Peli Motto, 
+                            <p ><strong>Amy Sedaris</strong> es una actriz, escritora y cómica conocida por sus papeles en 
+                            Trainwreck o en la serie Strangers with Candy. En The Mandalorian interpreta a <strong>Peli Motto</strong>, 
                             mecánica de Tatooine que aparece en las dos temporadas.</p>
                         </div>
                     </a>
@@ -243,8 +243,8 @@
                                 <img src="images/Personajes/ig-11-taika-waititi.webp" height="300px" width="400px" alt="IG 11">
                             </div>
                             <h4>IG 11 (Taika Waititi)</h4>
-                            <p>Taika Waititi dirige varios episodios de las dos temporadas de The Mandalorian 
-                            (y ha dirigido películas como Thor: Ragnarok o Jojo Rabbit) y también pone voz a IG-11, el robot 
+                            <p><strong>Taika Waititi</strong> dirige varios episodios de las dos temporadas de The Mandalorian 
+                            (y ha dirigido películas como Thor: Ragnarok o Jojo Rabbit) y también pone voz a <strong>IG-11</strong>, el robot 
                             asesino que aparece en el primer episodio de la serie y que después regresa reprogramado para proteger 
                             a Grogu.</p>
                         </div>
